@@ -137,9 +137,13 @@ class CompileMarkdown(PageCompiler):
             content += '\n'
         with io.open(path, "w+", encoding="utf8") as fd:
             if onefile:
-                fd.write('<!-- \n')
-                fd.write(write_metadata(metadata))
-                fd.write('-->\n\n')
+                _format = self.site.config.get('METADATA_FORMAT', 'nikola').lower()
+                if _format == 'pelican':
+                    _format = 'pelican_md'
+                data = write_metadata(metadata, _format)
+                if _format == 'nikola':
+                    data = '<!--\n' + data + '-->\n\n'
+                fd.write(data)
             fd.write(content)
 
     def read_metadata(self, post, file_metadata_regexp=None, unslugify_titles=False, lang=None):
@@ -153,7 +157,13 @@ class CompileMarkdown(PageCompiler):
         source = post.translated_source_path(lang)
         with io.open(source, 'r', encoding='utf-8') as inf:
             # Note: markdown meta returns lowercase keys
-            _, meta = self.converter.convert(inf.read())
+            data = inf.read()
+            # If the metadata starts with "---" it's actually YAML and
+            # we should not let markdown parse it, because it will do
+            # bad things like setting empty tags to "''"
+            if data.startswith('---\n'):
+                return {}
+            _, meta = self.converter.convert(data)
         # Map metadata from other platforms to names Nikola expects (Issue #2817)
         map_metadata(meta, 'markdown_metadata', self.site.config)
         return meta
