@@ -177,7 +177,10 @@ class CompileRest(PageCompiler):
             content += '\n'
         with io.open(path, "w+", encoding="utf8") as fd:
             if onefile:
-                fd.write(write_metadata(metadata))
+                _format = self.site.config.get('METADATA_FORMAT', 'nikola').lower()
+                if _format == 'pelican':
+                    _format = 'pelican_rest'
+                fd.write(write_metadata(metadata, _format))
                 fd.write('\n')
             fd.write(content)
 
