@@ -4,6 +4,8 @@ New in master
 Features
 --------
 
+* New METADATA_FORMAT option to choose preferred metadata format 
+  (Nikola/YAML/TOML/Pelican) (Part of Issue #2801)
 * Extract metadata from HTML meta and title tags like Pelican (Issue #1923)
 
 New in v7.8.7
